[FIX] new PromoPostDto